[package]
name = "exeutils"
version = "0.1.0"
authors = ["tristanm"]

[[bin]]
name = "readelf"
path = "src/readelf.rs"

[[bin]]
name = "objdump"
path = "src/objdump.rs"

[dependencies]
getopts = "0.2"

[dependencies.exefmt]
git = "https://github.com/monocasa/exefmt.git"

[dependencies.opcode]
git = "https://github.com/monocasa/opcode.git"

